--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -157,3 +157,18 @@
   <p>No Employees were found.</p>
 </div>
 </div>
+ 
+<footer class="footer-area">
+        <div class="footer-wave-box">
+            <div class="footer-wave footer-animation"></div>
+        </div>
+        <div class="main">
+            <div class="footer">
+                <div class="single-footer">
+                </div>
+            </div>
+            <div class="copy">
+                <p>&copy; 2021 all rights reserved</p>
+            </div>
+        </div>
+    </footer>
